Use local copy of js dependencies

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <div id="map" class="map"></div>
     <div id="probs" class="info"></div>
     <div id="info" class="info"></div>
-    <script src="http://d3js.org/d3.v3.min.js"></script>
-    <script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.js'></script>
+    <script src="js/d3.js"></script>
+    <script src='js/mapbox.js'></script>
+    <script src='js/jquery.js'></script>
+    <script src='js/togeojson.js'></script>
     <script src="js/leaflet-routing-machine.js"></script>
     <script src="site.js"></script>
 </body>
