Make it easy to cycle through data

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>OSRM matching example</title>
     <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.css' rel='stylesheet' />
     <link rel="stylesheet" href="css/leaflet-routing-machine.css" />
+    <link rel="stylesheet" href="css/leaflet.editinosm.css" />
     <link rel="stylesheet" href="css/site.css" />
 </head>
 <body>
@@ -16,6 +17,8 @@
     <script src='js/jquery.js'></script>
     <script src='js/togeojson.js'></script>
     <script src="js/leaflet-routing-machine.js"></script>
+    <script src="js/leaflet.editinosm.js"></script>
+    <script src="files.json"></script>
     <script src="site.js"></script>
 </body>
 </html>
