Split into seperate source files

--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     <script src="js/leaflet-routing-machine.js"></script>
     <script src="js/leaflet.editinosm.js"></script>
     <script src="files.json"></script>
-    <script src="site.js"></script>
+    <script src="dist/osrm.matching.js"></script>
 </body>
 </html>
