--- a/index.html
+++ b/index.html
@@ -2,21 +2,20 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>OSRM matching example</title>
-    <link rel='stylesheet' href='node_modules/mapbox.js/dist/mapbox.standalone.css'/>
-    <link rel="stylesheet" href="node_modules/leaflet/dist/leaflet.css" />
-    <link rel="stylesheet" href="node_modules/leaflet-editinosm/Leaflet.EditInOSM.css" />
+  <title>OSRM Matching Inspection</title>
+    <link rel='stylesheet' href="./bower_components/mapbox.js/mapbox.css" />
+    <link rel="stylesheet" href="./bower_components/Leaflet.EditInOSM/Leaflet.EditInOSM.css" />
     <link rel="stylesheet" href="css/site.css" />
 </head>
 <body>
     <div id="map" class="map"></div>
     <div id="probs" class="info"></div>
     <div id="info" class="info"></div>
-    <script src="js/d3.js"></script>
-    <script src='js/jquery.js'></script>
-    <script src='js/togeojson.js'></script>
-    <script src='./node_modules/mapbox.js/dist/mapbox.uncompressed.js'></script>
-    <script src="./node_modules/leaflet-editinosm/Leaflet.EditInOSM.js"></script>
+    <script src="./bower_components/d3/d3.min.js"></script>
+    <script src="./bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="./bower_components/mapbox.js/mapbox.uncompressed.js"></script>
+    <script src="./bower_components/Leaflet.EditInOSM/Leaflet.EditInOSM.js"></script>
+    <script src="./bower_components/togeojson/togeojson.js"></script>
     <script src="dist/osrm.matching.js"></script>
 </body>
 </html>
