--- a/classify.html
+++ b/classify.html
@@ -10,10 +10,10 @@
 <body>
     <div id="map" class="map"></div>
     <div id="classes" class="info"></div>
-    <script src="js/d3.js"></script>
-    <script src='js/jquery.js'></script>
-    <script src='js/togeojson.js'></script>
-    <script src="js/leaflet-routing-machine.js"></script>
+    <script src="./bower_components/d3/d3.min.js"></script>
+    <script src="./bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="./bower_components/mapbox.js/mapbox.uncompressed.js"></script>
+    <script src="./bower_components/togeojson/togeojson.js"></script>
     <script src="dist/osrm.classify.js"></script>
 </body>
 </html>
