Added Edit in OSM to Classify

--- a/classify.html
+++ b/classify.html
@@ -5,6 +5,7 @@
   <title>OSRM matching example</title>
     <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.css' rel='stylesheet' />
     <link rel="stylesheet" href="css/site.css" />
+    <link rel="stylesheet" href="./bower_components/Leaflet.EditInOSM/Leaflet.EditInOSM.css" />
 </head>
 <body>
     <div id="map" class="map"></div>
@@ -13,6 +14,7 @@
     <script src="./bower_components/jquery/dist/jquery.min.js"></script>
     <script src="./bower_components/mapbox.js/mapbox.uncompressed.js"></script>
     <script src="./bower_components/togeojson/togeojson.js"></script>
+    <script src="./bower_components/Leaflet.EditInOSM/Leaflet.EditInOSM.js"></script>
     <script src="dist/osrm.classify.js"></script>
 </body>
 </html>
